# maestro_test_list.yaml

appId: ${appId}
---
- launchApp
- assertVisible: "List"
- tapOn: "List"
- assertVisible: "List"
- repeat:
    times: 5
    commands:
      - swipe:
          start: 50%, 90%
          end: 50%, 10%
          duration: 100


